--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,11 @@
       ]
     }
   },
+  "paths": {
+    "@root/*": [
+      "./src/*"
+    ]
+  },
   "include": [
     "**/*.ts",
     "**/*.tsx",
