--- a/package.json
+++ b/package.json
@@ -8,7 +8,12 @@
     "ios": "expo start --ios",
     "web": "expo start --web",
     "test": "jest --watchAll",
-    "lint": "expo lint"
+    "lint": "expo lint",
+    "typeCheck": "tsc --noEmit",
+    "pretty": "pretty-quick --staged",
+    "prepare": "husky install",
+    "hook:precommit": "yarn typeCheck && yarn lint && yarn pretty",
+    "hook:prepush": "yarn jest"
   },
   "jest": {
     "preset": "jest-expo"
@@ -17,6 +22,7 @@
     "@expo/vector-icons": "^14.0.2",
     "@react-navigation/native": "^6.0.2",
     "@reduxjs/toolkit": "^2.2.7",
+    "dayjs": "^1.11.12",
     "expo": "~51.0.26",
     "expo-constants": "~16.0.2",
     "expo-font": "~12.0.9",
@@ -26,6 +32,7 @@
     "expo-status-bar": "~1.12.1",
     "expo-system-ui": "~3.0.7",
     "expo-web-browser": "~13.0.3",
+    "husky": "^9.1.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.5",
@@ -41,8 +48,12 @@
     "@types/jest": "^29.5.12",
     "@types/react": "~18.2.45",
     "@types/react-test-renderer": "^18.0.7",
+    "eslint": "^8.57.0",
+    "eslint-config-expo": "^7.1.2",
     "jest": "^29.2.1",
     "jest-expo": "~51.0.3",
+    "prettier": "^3.3.3",
+    "pretty-quick": "^4.0.0",
     "react-test-renderer": "18.2.0",
     "typescript": "~5.3.3"
   },
