Task: Enable new architecture

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@reduxjs/toolkit": "^2.2.7",
     "dayjs": "^1.11.12",
     "expo": "~51.0.26",
+    "expo-build-properties": "~0.12.5",
     "expo-constants": "~16.0.2",
     "expo-font": "~12.0.9",
     "expo-linking": "~6.3.1",
@@ -56,6 +57,14 @@
     "pretty-quick": "^4.0.0",
     "react-test-renderer": "18.2.0",
     "typescript": "~5.3.3"
+  },
+  "expo": {
+    "doctor": {
+      "reactNativeDirectoryCheck": {
+        "enabled": true,
+        "listUnknownPackages": false
+      }
+    }
   },
   "private": true
 }
