--- a/app.json
+++ b/app.json
@@ -40,7 +40,8 @@
             "newArchEnabled": true
           }
         }
-      ]
+      ],
+      "expo-localization"
     ],
     "experiments": {
       "typedRoutes": true
