--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "@amplitude/analytics-react-native": "^1.4.9",
     "@expo/vector-icons": "^14.0.2",
+    "@react-native-async-storage/async-storage": "1.23.1",
     "@react-navigation/native": "^6.0.2",
     "@reduxjs/toolkit": "^2.2.7",
     "dayjs": "^1.11.12",
